bk_ida/gccida/g2/move_movables
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2265:4: error: expected ';' after expression
rtx v36; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2265:5: error: use of undeclared identifier 'v36'
rtx v36; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2273:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2273:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2275:4: error: expected ';' after expression
rtx v46; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2275:5: error: use of undeclared identifier 'v46'
rtx v46; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2277:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2277:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2285:4: error: expected ';' after expression
rtx v56; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2285:5: error: use of undeclared identifier 'v56'
rtx v56; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2286:4: error: expected ';' after expression
rtx v57; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2286:5: error: use of undeclared identifier 'v57'
rtx v57; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2288:4: error: expected ';' after expression
rtx v59; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2288:5: error: use of undeclared identifier 'v59'
rtx v59; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2289:4: error: expected ';' after expression
rtx v60; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2289:5: error: use of undeclared identifier 'v60'
rtx v60; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2291:4: error: expected ';' after expression
rtx set_dest; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2291:5: error: use of undeclared identifier 'set_dest'
rtx set_dest; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/loop.c:2296:4: error: expected ';' after expression
rtx v67; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/move_movables/src/obj/loop.o] Error 1
